# estudaFlow

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
src/: __init__.py  app.py  models.py  storage.py
tests/: test_estudaflow.py
